# TG-DL-video-BOT

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PLAN.md  PROJECT_STRUCTURE.md  README.md
src/: config.rs  error.rs  main.rs
src/bot/: commands.rs  handlers.rs  mod.rs
src/downloader/: gallery_dl_fallback.rs  mod.rs  pipeline.rs  rusty_dl_fallback.rs  rusty_ytdl_fallback.rs  types.rs  ytdlp.rs
src/platform/: matcher.rs
src/sender/: upload.rs
src/util/: cleanup.rs  mod.rs  url.rs
