[package]
name = "tg-dl-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
linkify = "0.10"
regex = "1"
tempfile = "3"
dashmap = "6"
url = "2"
futures = "0.3.32"

# Fallback downloaders when yt-dlp fails (YouTube only)
rusty_ytdl = "0.7"
rusty_dl = "1.0"
